--- a/GameBoard.html
+++ b/GameBoard.html
@@ -112,12 +112,12 @@
     <h1>🎮 Choose a Game to Play</h1>
     <div class="game-cards" id="gameCards">
       <div class="card">
-        <img src="caccac9b-482e-46c0-9e1d-d8d8339b6d61.png" alt="Tic Tac Toe" />
+        <img src="TicTac.png" alt="Tic Tac Toe" />
         <h2>Tic Tac Toe</h2>
         <button onclick="loadGame('tictactoe')">Play Now</button>
       </div>
       <div class="card">
-        <img src="eee4a38f-5c52-489f-bc22-1c5aaaedca7a.png" alt="Space Invaders" />
+        <img src="Space_Invaders_flyer,_1978.jpg" alt="Space Invaders" />
         <h2>Space Invaders</h2>
         <button onclick="loadGame('spaceinvaders')">Play Now</button>
       </div>
