--- a/GameBoard.html
+++ b/GameBoard.html
@@ -145,10 +145,10 @@
 
       if (game === "tictactoe") {
         music = new Audio("https://www.bensound.com/bensound-music/bensound-sunny.mp3");
-        frame.src = "TicTacToe_Interactive_Spaced.html";
+        frame.src = "TicTacToe.html";
       } else if (game === "spaceinvaders") {
         music = new Audio("https://www.bensound.com/bensound-music/bensound-scifi.mp3");
-        frame.src = "SpaceInvaders_Enhanced_WithMusicToggle.html";
+        frame.src = "SpaceInvaders";
       }
 
       music.loop = true;
